--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -624,6 +624,10 @@ input, select, textarea {
 
 	}
 
+	.margin.small {
+		margin-bottom: 0.6em;
+	}
+
 /* Container */
 
 	.container {
@@ -2499,6 +2503,7 @@ input, select, textarea {
 					text-transform: none !important;
 					font-family: 'Font Awesome 5 Free';
 					font-weight: 400;
+					padding-top: 0.8em;
 				}
 
 				.icon.major.alt:before {
